--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "grunt-recess": "~0.3.0",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-coverage": "^1.0.0"
+    "karma-coverage": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0"
   }
 }
