--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "grunt-gh-pages": "^1.0.0",
     "grunt-gjslint": "~0.1.3",
     "grunt-html2js": "~0.1.3",
-    "grunt-karma": "~0.5.0",
+    "grunt-karma": "~1.0.0",
     "grunt-newer": "~0.7.0",
     "grunt-ngmin": "0.0.2",
     "grunt-recess": "~0.3.0",
     "jasmine": "^2.4.1",
-    "karma": "^0.13.22",
     "karma-coverage": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma": "^0.13.22"
   }
 }
