Do not load volumes by default (for now)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   maploom:
     build: .
-    volumes:
-      - '.:/usr/src/app'
+#    volumes:
+#      - '.:/usr/src/app'
     ports:
       - "9000:9000"
