--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   maploom:
     build: .
-#    volumes:
-#      - '.:/usr/src/app'
+    volumes:
+      - './src:/usr/src/app/src'
     ports:
-      - "9000:9000"
+      - "3000:3000"
