--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
 
   elasticsearch:
    image: elasticsearch
+   ports:
+      - "9200:9200"
 
   rabbitmq:
      image: rabbitmq
@@ -43,7 +45,7 @@ services:
       - C_FORCE_ROOT=1
 
   nginx:
-    image: terranodo/nginx:3k8k
+    build: docker/nginx
     links:
       - django
       - maploom
